<resources>
    <string name="app_name">MadLevel3Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Title">click START to start rating :)</string>
    <string name="subTitle">Welcome to the Games Rating app!</string>
    <string name="start">Start</string>
    <string name="to_summary">TO SUMMARY</string>
    <string name="game">game</string>
    <string name="rate_the_following_game_from_1_to_5_stars">Rate the following game from 1 to 5 stars!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_over">start over</string>
</resources>